fix: make text wrap board features and add sort for it

--- a/frontend/unmatched-frontend/src/components/DataTable/DataTable.css
+++ b/frontend/unmatched-frontend/src/components/DataTable/DataTable.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 }
 
+.data-table-container td[data-label="Feature"] {
+    max-width: 300px;
+    white-space: pre-wrap;
+    word-break: break-word;
+}
+
 .scrollable {
     overflow-x: auto;
     margin: 1rem 0;
